--- a/escuelita.html
+++ b/escuelita.html
@@ -59,12 +59,53 @@
                                             <li>HORARIO: de 10 a 13 hs</li>
                                             <li>SALVAMENTO ADULTXS: mayores de 18 años. Días y horarios a confirmar</li>
                                                                                     </ul>
-									<P>El programa puede ser diario o semanal e incluye:
+									<P>El programa puede ser diario, semanal, quincenal o mensual e incluye:
 										<ul>
 											<li>Todas las actividades de la escuela.</li>
 											<li>Colaciones frutales e hidratación durante la jornada.</li>
 										</ul>
 									</P>
+								<section>
+									<h3>COSTOS</h3>
+									<blockquote>Tenemos un 30% de descuento para miembros de Alma Verde y para residentes de Monte Hermoso!!!</blockquote>
+								
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>PROGRAMA</th>
+													<th>PRECIO</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>DIARIO </td>
+													<td>4.000 $</td>
+												</tr>
+												<tr>
+													<td>1° SEMANA</td>
+													<td>9.000 $</td>
+												</tr>
+												<tr>
+													<td>QUINCENA</td>
+													<td>16.000 $</td>
+												</tr>
+												<tr>
+													<td>MENSUAL</td>
+													<td>28.000$</td>
+												</tr>
+											</tbody>
+									</table>
+									</div>
+								</section>
+								<section>
+									<h3>FORMAS DE PAGO</h3>
+										<ul>
+											<li>CONTADO/EFECTIVO</li>
+											<li>MERCADO PAGO (10% de interés)</li>
+											<li>POR TRANSFERENCIA BANCARIA</li>
+										</ul>
+										<blockquote><STRONG>El cupo será reservado abonando el 50% de la inscripción.</STRONG></blockquote>
 								</section>
 							</div>
 							<div class="contenedor-responsivo">	
