--- a/escuelita.html
+++ b/escuelita.html
@@ -83,7 +83,7 @@
 													<td>4.000 $</td>
 												</tr>
 												<tr>
-													<td>1° SEMANA</td>
+													<td>SEMANAL</td>
 													<td>9.000 $</td>
 												</tr>
 												<tr>
