--- a/escuelita.html
+++ b/escuelita.html
@@ -62,11 +62,11 @@
 									<P>El programa puede ser diario, semanal, quincenal o mensual e incluye:
 										<ul>
 											<li>Todas las actividades de la escuela.</li>
-											<li>Colaciones frutales e hidratación durante la jornada.</li>
+											<li>Colaciones frutales durante la jornada.</li>
 										</ul>
 									</P>
 								<section>
-									<h3>COSTOS</h3>
+									<h3>PRECIOS PROMOCIONALES TEMPORADA 22/23</h3>
 									<blockquote>Tenemos un 30% de descuento para miembros de Alma Verde y para residentes de Monte Hermoso!!!</blockquote>
 								
 									<div class="table-wrapper">
@@ -102,10 +102,10 @@
 									<h3>FORMAS DE PAGO</h3>
 										<ul>
 											<li>CONTADO/EFECTIVO</li>
-											<li>MERCADO PAGO (10% de interés)</li>
+											<li>MERCADO PAGO</li>
 											<li>POR TRANSFERENCIA BANCARIA</li>
 										</ul>
-										<blockquote><STRONG>El cupo será reservado abonando el 50% de la inscripción.</STRONG></blockquote>
+										<blockquote><STRONG>Inscribite ahora, el cupo es limitado</STRONG></blockquote>
 								</section>
 							</div>
 							<div class="contenedor-responsivo">	
@@ -130,7 +130,7 @@
 							<li><a href="https://www.facebook.com/salvamentojuniormh/?modal=admin_todo_tour" target="none" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/escuelademarmh/" target="none" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:info@alma-verde.org" target="none" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							<li><a href="https://api.whatsapp.com/send?phone=5492914321082&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=5492914637788&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 
 						</ul>
 						<ul class="copyright">
