--- a/escuelita.html
+++ b/escuelita.html
@@ -44,7 +44,7 @@
 						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic.05.jpg);'>
 							<h2>ESCUELA DE MAR</h2>
 							<ul class="actions special">
-								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://acortar.link/4TQJDf" target="none" class="button primary">INSCRIBITE</a></li>
 							</ul>
 						</header>
 						<section class="wrapper style5">
@@ -67,7 +67,7 @@
 									</P>
 								<section>
 									<h3>PRECIOS PROMOCIONALES TEMPORADA 22/23</h3>
-									<blockquote>Tenemos un 30% de descuento para miembros de Alma Verde y para residentes de Monte Hermoso!!!</blockquote>
+									<blockquote>Tenemos un 20% de descuento para residentes de Monte Hermoso!!!</blockquote>
 								
 									<div class="table-wrapper">
 										<table>
@@ -80,19 +80,19 @@
 											<tbody>
 												<tr>
 													<td>DIARIO </td>
-													<td>4.000 $</td>
+													<td> $</td>
 												</tr>
 												<tr>
 													<td>SEMANAL</td>
-													<td>9.000 $</td>
+													<td> $</td>
 												</tr>
 												<tr>
 													<td>QUINCENA</td>
-													<td>16.000 $</td>
+													<td>$</td>
 												</tr>
 												<tr>
 													<td>MENSUAL</td>
-													<td>28.000$</td>
+													<td>$</td>
 												</tr>
 											</tbody>
 									</table>
@@ -117,7 +117,7 @@
 								<section>
 									<h4 style="text-align:center">NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
 									<ul class="actions special">
-										<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
+										<li><a href="https://acortar.link/4TQJDf" target="none" class="button primary">INSCRIBITE</a></li>
 									</ul>
 								</section>
 							</div>
@@ -130,7 +130,7 @@
 							<li><a href="https://www.facebook.com/salvamentojuniormh/?modal=admin_todo_tour" target="none" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/escuelademarmh/" target="none" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:info@alma-verde.org" target="none" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							<li><a href="https://api.whatsapp.com/send?phone=5492914637788&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=5492915662338&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 
 						</ul>
 						<ul class="copyright">
