--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<img id='logo' src="./images/logo.svg" />
 							<ul class="actions special">
-								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://acortar.link/4TQJDf" target="none" class="button primary">INSCRIBITE</a></li>
 								<li><a href="https://api.whatsapp.com/send?phone=5492915662338&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
 
 							</ul>
@@ -137,7 +137,7 @@
 								<h2>Vení a vivir un verano inolvidable en la Escuela de Mar de Monte Hermoso</h2>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://docs.google.com/forms/d/1_MpxA7KcOrIctma2TaivkP7YuRRmunAvyLAbcY0UNrQ/edit?usp=sharing" target="none" class="button fit primary">INSCRIBITE</a></li>
+								<li><a href="https://acortar.link/4TQJDf" target="none" class="button fit primary">INSCRIBITE</a></li>
 							</ul>
 						</div>
 					</section>
