--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="ESCUELA DE MAR 2024 - Monte Hermoso"/>
 		<meta property="og:image" content="http://escuelademar.com.ar/images/logo-2.jpeg"/>
-		<meta property="og:description" content="UNA PROPUESTA DE VERANO LLEVADA A CABO POR GUARDAVIDAS, INSTRUCTURES DE NAUTICA Y PROFESIONALES DE LA EDUCACIÓN. Con aprendizajes vivenciales en el MAR y la PLAYA..."/>
+		<meta property="og:description" content=" Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como EE.UU y Australia./>
 	</head>
 	<body class="landing is-preload">
 
