cambios index.html

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Una propuesta turística y educativa<br/>
-								basada en aprendizajes y vivencias sobre el MAR y la PLAYA.<br/>
-								contamos con un equipo exclusivamente conformado por PROFESIONALES:<br/>
-								GUARDAVIDAS, DOCENTES E INSTRUCTORES CERTIFICADOS</h2>
+								<h2> Una propuesta turística y educativa inspirada en los programas<br/>
+								The Junior Lifeguard que se desarrollan en países como<br/>
+								EE.UU y Australia.<br/>
+								Para llevarlo a cabo contamos con un equipo exclusivamente conformado por<br/>
+								Profesores de Educación Física, Guardavidas, Docentes e Instructores certíficados.<br/>
+								</h2>
 							</header>
 							<ul class="icons major">
 								<li><a title="Parador Prisma" href="#"><img src="images/logo2.jpg"></a></li>
