grupos escuela index.html

--- a/index.html
+++ b/index.html
@@ -76,21 +76,46 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic.02.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO JUNIOR</h2>
-								<p>Una escuela que se basa en aprendizajes vivenciales en el MAR.<br />
-								Prácticas deportivas que incluyen natación, preparación física en la arena y salvamento, como parte de la formación integral para que, quienes hagan la experiencia, sepan desenvolverse en el medio acuático con seguridad, así como también actúen de forma correcta ante cualquier situación de emergencia. <a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
+								<p> Para chicos y chicas de entre 12 y 17 años con conocimientos de natación. 
+								Los jóvenes de este grupo llevan a cabo prácticas deportivas que incluyen natación en aguas abiertas, preparación física en la arena,
+ 								entrenamientos de salvamento acuático y pruebas y competencias de salvamento deportivo.<br /> 
+								Realizan clases teóricas sobre temas afines como vientos, corrientes y mareas; las funciones de los guardavidas; la topografía de la playa y
+ 								sus plantas nativas; la cadena de sobrevida y la maniobra de RCP; los primeros auxilios; entre otros, que  complementan la actividad  
+								práctica, desarrollando así una formación integral que les permitirá desenvolverse en el medio acuático con seguridad, así como
+ 								también poder actuar de forma correcta ante cualquier situación de emergencia.<br />
+								<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic.03.jpg" alt="" /></div><div class="content">
-								<h2>ESCUELITA DE MAR</h2>
-								<p>La Escuelita de Mar es una actividad donde, a través de diferentes juegos, los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre el salvamento acuático, el surf y el bodyboard.<br/>
+								<h2>PRE-SALVAMENTO</h2>
+								<p> Para niños y niñas de entre 8 y 11 años. Este grupo conforma la transición entre la Escuelita y 
+								Salvamento Junior, dando los primeros pasos en la natación de aguas abiertas, realizando nados en zonas más alejadas de la costa y comenzando a
+ 								entrenar en  los circuitos de preparación física que permitirán desarrollar en el niño/a habilidades motrices como la fuerza, la
+ 								velocidad, la coordinación, entre otras.<br />
+								La práctica de rescates individuales y en equipo comienza a sentar las bases del desarrollo de un verdadero Mini - Guardavidas. 
+								Aquí se profundizan todas las actividades complementarias que se iniciaron en la Escuelita de Mar.<br/>
 								<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic.04.jpeg" alt="" /></div><div class="content">
+								<h2>ESCUELITA</h2>
+								<p> Para niños y niñas de entre 5 y 7 años. La principal herramienta de trabajo en este grupo es el juego. Aquí
+								los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre el salvamento acuático, la seguridad en el agua, la
+ 								cadena de sobrevida y el rcp.<br/> 
+								Las actividades complementarias incluyen: la educación ambiental, las visitas al museo de Ciencias Naturales, las limpiezas de playa, el
+ 								reconocimiento de las plantas nativas costeras y se dan los primeros
+								pasos en deportes como el surf y el bodyboard.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
+							</div>
+						</section>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic.04.jpeg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO ADULTOS</h2>
-								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica. Para los adultos que no quieren quedarse afuera, este año sumamos actividades para quienes son amantes de la natación y el mar.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
+								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica.<br/>
+								Para los adultos que no quieren quedarse afuera, organizamos actividades, entrenamientos y eventos
+								de natación en aguas abiertas de forma segura y aplicando los conocimientos del salvamento acuático.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 					</section>
