--- a/index.html
+++ b/index.html
@@ -58,14 +58,26 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2> Una propuesta turística y educativa inspirada en los programas<br/>
-								The Junior Lifeguard que se desarrollan en países como<br/>
+								<h2> Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como<br/>
 								EE.UU y Australia.<br/>
 								Para llevarlo a cabo contamos con un equipo exclusivamente conformado por<br/>
 								Profesores de Educación Física, Guardavidas, Docentes e Instructores certíficados.<br/>
 								</h2>
 							</header>
 							<ul class="icons major">
+								<h2> Nuestras jornadas se desarrollan en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.<br/> 
+								Las actividades son complementadas con las herramientas que nos brinda la educación ambiental, buscando desarrollar una conciencia
+								ética y colectiva sobre todas las formas de vida con las cuales compartimos este planeta y la importancia de su cuidado, como
+ 								verdaderos guardianes del ambiente. Esto se logra tambien  por el contacto físico diario con el entorno natural  y por las charlas,
+								actividades, juegos dídácticos y debates sobre la fauna marina, el océano, la topografía del lugar y las intervenciones que el ser
+ 								humano hace en el medio.<br/>
+								A través del progreso y los logros personales colaboramos en el desarrollo de la 
+								autoestima y mediante el intercambio constante con instructores compasivos y 
+								trabajando con otros jóvenes en un entorno de formación de equipos colaborativos, aumenta 
+								el respeto por los demás.<br/>
+								Nuestras actividades se llevan a cabo en el Parador Prisma Beach de Monte Hermoso, en el horario de 10 a 13hs los días Lunes, Miercoles 
+								y Viernes. 
+								</h2>
 								<li><a title="Parador Prisma" href="#"><img src="images/logo2.jpg"></a></li>
 							</ul>
 						</div>
