--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 -->
 <html>
 	<head>
-		<title>ESCUELA DE MAR - Monte Hermoso</title>
+		<title>ESCUELA DE MAR® - Monte Hermoso</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
-		<meta property="og:title" content="ESCUELA DE MAR 2024 - Monte Hermoso"/>
+		<meta property="og:title" content="ESCUELA DE MAR® 2025 - Monte Hermoso"/>
 		<meta property="og:image" content="http://escuelademar.com.ar/images/logo-2.jpeg"/>
 		<meta property="og:description" content=" Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como EE.UU y Australia./>
 	</head>
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">ESCUELA DE MAR</a></h1>
+						<h1><a href="index.html">ESCUELA DE MAR®</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
