logo prisma y borre salvamento adultos index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</h2>
 							</header>
 							<ul class="icons major">
-								<h2> Nuestras jornadas se desarrollan en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.<br/> 
+								<h3> Nuestras jornadas se desarrollan en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.<br/> 
 								Las actividades son complementadas con las herramientas que nos brinda la educación ambiental, buscando desarrollar una conciencia
 								ética y colectiva sobre todas las formas de vida con las cuales compartimos este planeta y la importancia de su cuidado, como
  								verdaderos guardianes del ambiente. Esto se logra tambien  por el contacto físico diario con el entorno natural  y por las charlas,
@@ -77,8 +77,8 @@
 								el respeto por los demás.<br/>
 								Nuestras actividades se llevan a cabo en el Parador Prisma Beach de Monte Hermoso, en el horario de 10 a 13hs los días Lunes, Miercoles 
 								y Viernes. 
-								</h2>
-								<li><a title="Parador Prisma" href="#"><img src="images/logo2.jpg"></a></li>
+								</h3>
+								<li><a title="Parador Prisma" href="https://www.instagram.com/prisma_beach/"><img src="images/logo2.jpg"></a></li>
 							</ul>
 						</div>
 					</section>
@@ -119,15 +119,6 @@
 								Las actividades complementarias incluyen: la educación ambiental, las visitas al museo de Ciencias Naturales, las limpiezas de playa, el
  								reconocimiento de las plantas nativas costeras y se dan los primeros
 								pasos en deportes como el surf y el bodyboard.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
-							</div>
-						</section>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic.04.jpeg" alt="" /></div><div class="content">
-								<h2>SALVAMENTO ADULTOS</h2>
-								<p>El deporte es salud, entrenar en grupos es motivador, la energía se multiplica.<br/>
-								Para los adultos que no quieren quedarse afuera, organizamos actividades, entrenamientos y eventos
-								de natación en aguas abiertas de forma segura y aplicando los conocimientos del salvamento acuático.<a href="escuelita.html" target="none"><blockquote>Más información...</blockquote></a></p>
 							</div>
 						</section>
 					</section>
