--- a/index.html
+++ b/index.html
@@ -65,13 +65,7 @@
 								</h2>
 							</header>
 							<ul class="icons major">
-								<h3> Nuestras jornadas se desarrollan en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.<br/> 
-								Las actividades son complementadas con las herramientas que nos brinda la educación ambiental, buscando desarrollar una conciencia
-								ética y colectiva sobre todas las formas de vida con las cuales compartimos este planeta y la importancia de su cuidado, como
- 								verdaderos guardianes del ambiente. Esto se logra tambien  por el contacto físico diario con el entorno natural  y por las charlas,
-								actividades, juegos dídácticos y debates sobre la fauna marina, el océano, la topografía del lugar y las intervenciones que el ser
- 								humano hace en el medio.<br/>
-								A través del progreso y los logros personales colaboramos en el desarrollo de la 
+								<h3> A través del progreso y los logros personales colaboramos en el desarrollo de la 
 								autoestima y mediante el intercambio constante con instructores compasivos y 
 								trabajando con otros jóvenes en un entorno de formación de equipos colaborativos, aumenta 
 								el respeto por los demás.<br/>
@@ -127,9 +121,12 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>un programa que se desarrollará en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.</h2>
-								<p>Nuestras actividades serán complementadas con la EDUCACIÓN AMBIENTAL,buscando desarrollar conciencia ética y colectiva <br />
-								sobre todas las formas de vida con las cuales compartimos este planeta y la importancia de su cuidado, como verdaderos GUARDIANES DEL AMBIENTE.</p>
+								<h2> Nuestras jornadas se desarrollan en la playa y en el mar, entorno al que debemos conocer, proteger y conservar.<br/> 
+								Las actividades son complementadas con las herramientas que nos brinda la educación ambiental, buscando desarrollar una conciencia
+								ética y colectiva sobre todas las formas de vida con las cuales compartimos este planeta y la importancia de su cuidado, como
+ 								verdaderos guardianes del ambiente. Esto se logra tambien  por el contacto físico diario con el entorno natural  y por las charlas,
+								actividades, juegos dídácticos y debates sobre la fauna marina, el océano, la topografía del lugar y las intervenciones que el ser
+ 								humano hace en el medio.</p>
 							</header>
 							<ul class="features">
 								<li>
