actividades index.html

--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
 							</header>
 							<ul class="features">
 								<li>
-									<h3>Entrenamientos en el mar y con elementos de rescate</h3>
-									<p>Prácticas deportivas de salvamento, nados en aguas abiertas, preparación física en la arena, juegos y recreación</p>
+									<h3>ENTRENAMIENTOS EN EL MAR</h3>
+									<p> Prácticas deportivas de salvamento, natación  en aguas abiertas, circuitos de preparación física en 
+									la arena, juegos y recreación</p>
 								</li>
 								<li>
-									<h3>Vientos, Corrientes y Mareas</h3>
-									<p>Realizamos instancias teóricas sobre lectura de vientos, corrientes y mareas, interpretación de la topografía de la playa.</p>
+									<h3>NOCIONES BÁSICAS DE SURF</h3>
+									<p> Aprender a posicionarse en la tabla, la técnica de la parada la lectura del mar y de los buenos pronósticos
+									de olas.</p>
 								</li>
 								<li>
-									<h3>Nociones básicas del surf</h3>
-									<p>El surf, el bodyboard y el sup como deportes. Aprenderemos a posicionarnos en la tabla, la técnica de parada, la lectura del mar y de los buenos pronosticos de olas.</p>
+									<h3>VIENTOS, CORRIENTES Y MAREAS</h3>
+									<p>Clases teóricas sobre lectura de vientos, conocimientos de las corrientes y las mareas y la interpretación de la topografía de la playa</p>
 								</li>
 								<li>
-									<h3>Primeros auxilios y RCP</h3>
-									<p>Enseñanza teórica y práctica de las nociones básicas de los primeros auxilios y el RCP.El botiquín de primeros auxilios. La comunicación en la playa y la activación de la cadena de emergencia.</p>
+									<h3> PRIMEROS AUXILIOS Y RCP</h3>
+									<p> Enseñanza teórica y práctica de las nociones básicas de los primeros auxilios y la maniobra de RCP. El botiquín de primeros auxilios. La comunicación en la
+ 									playa y la activación de la cadena de emergencia.</p>
 								</li>
 								<li>
-									<h3>Simulación de rescates y recreación</h3>
-									<p>Mediante el juego y la recreación simularemos rescates sintiendonos verdaderos Guardavidas Juniors.</p>
-								</li>
-								<li>
-									<h3>Un aprendizaje integral</h3>
-									<p>Buscamos fomentar valores a través del deporte tales como la Honestidad, el Compañerismo, la Perseverancia y la Empatía.</p>
+									<h3> SIMULACIÓN DE RESCATES</h3>
+									<p> La repetición de las prácticas es lo que los lleva a mejorarse a sí mismos constantemente, desafiando distintos climas y estados del mar 
+									y siempre priorizando el trabajo en equipo.</p>
 								</li>
 							</ul>
 						</div>
