--- a/escuelita.html
+++ b/escuelita.html
@@ -6,15 +6,16 @@
 -->
 <html>
 	<head>
-		<title>ESCUELA DE MAR - Monte Hermoso</title>
+		<title>ESCUELA DE MAR®️ - Monte Hermoso</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
-		<meta property="og:title" content="ESCUELA DE MAR - Monte Hermoso"/>
-		<meta property="og:image" content="http://escuelademar.alma-verde.org/images/pic03.jpg"/>
-		<meta property="og:description" content="Una propuesta educativa de verano llevada a cabo por Guardavidas y Profesionales del Deporte Náutico y de la Educación. Con aprendizajes vivenciales desde el MAR, las OLAS y la PLAYA..."/>
+		<meta property="og:title" content="ESCUELA DE MAR®️ - Monte Hermoso"/>
+		<meta property="og:image" content="http://escuelademar.com.ar/images/pic03.jpg"/>
+		<meta property="og:description" content="Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países 
+		como EE.UU y Australia llevada a cabo por Profesores y Guardavidas certificados"/>
 	</head>
 	<body class="is-preload">
 
@@ -51,14 +52,14 @@
 							<div class="inner">
 
 								<section>
-									<h3>CURSO DE VERANO 2023</h3>
+									<h3>CURSO DE VERANO 2025</h3>
                                         <ul>
                                             <li>LUGAR: Parador PRISMA BEACH, Juan Domingo Perón 208 <a href="https://www.google.com/maps/place/Parador+Prisma+Beach/@-38.9858191,-61.3078785,14z/data=!4m8!1m2!2m1!1sprisma+beach+monte+hermoso!3m4!1s0x0:0xadaa24fc21d0c216!8m2!3d-38.9892317!4d-61.2896293" target="none">. Conocé cómo llegar.</li>
                                             <li>DÍAS: Lunes, Miércoles y Viernes.</li>
                                             <li>EDADES: de 5 a 17 años</li>
                                             <li>HORARIO: de 10 a 13 hs</li>
                                             <li>SALVAMENTO ADULTXS: mayores de 18 años. Días y horarios a confirmar</li>
-                                                                                    </ul>
+                                        </ul>
 									<P>El programa puede ser diario, semanal, quincenal o mensual e incluye:
 										<ul>
 											<li>Todas las actividades de la escuela.</li>
@@ -66,7 +67,7 @@
 										</ul>
 									</P>
 								<section>
-									<h3>PRECIOS PROMOCIONALES TEMPORADA 22/23</h3>
+									<h3>PRECIOS PROMOCIONALES TEMPORADA 24/25</h3>
 									<blockquote>Tenemos un 20% de descuento para residentes de Monte Hermoso!!!</blockquote>
 								
 									<div class="table-wrapper">
@@ -80,19 +81,19 @@
 											<tbody>
 												<tr>
 													<td>DIARIO </td>
-													<td> $</td>
+													<td> $25.000</td>
 												</tr>
 												<tr>
 													<td>SEMANAL</td>
-													<td> $</td>
+													<td> $60.000</td>
 												</tr>
 												<tr>
 													<td>QUINCENA</td>
-													<td>$</td>
+													<td> $100.000</td>
 												</tr>
 												<tr>
 													<td>MENSUAL</td>
-													<td>$</td>
+													<td>$210.000</td>
 												</tr>
 											</tbody>
 									</table>
@@ -101,9 +102,7 @@
 								<section>
 									<h3>FORMAS DE PAGO</h3>
 										<ul>
-											<li>CONTADO/EFECTIVO</li>
-											<li>MERCADO PAGO</li>
-											<li>POR TRANSFERENCIA BANCARIA</li>
+											<li>POR TRANSFERENCIA BANCARIA o MERCADO PAGO</li>
 										</ul>
 										<blockquote><STRONG>Inscribite ahora, el cupo es limitado</STRONG></blockquote>
 								</section>
@@ -117,7 +116,7 @@
 								<section>
 									<h4 style="text-align:center">NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
 									<ul class="actions special">
-										<li><a href="https://acortar.link/4TQJDf" target="none" class="button primary">INSCRIBITE</a></li>
+										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfYMzca9GJRCT2ktkmKLi8WM98fPtTjTA9gENJXZS2mKsdBfw/viewform?usp=pp_url" target="none" class="button primary">INSCRIBITE</a></li>
 									</ul>
 								</section>
 							</div>
