--- a/index.html
+++ b/index.html
@@ -59,19 +59,15 @@
 						<div class="inner">
 							<header class="major">
 								<h2> Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como<br/>
-								EE.UU y Australia.<br/>
-								Para llevarlo a cabo contamos con un equipo exclusivamente conformado por<br/>
-								Profesores de Educación Física, Guardavidas, Docentes e Instructores certíficados.<br/>
+								EE.UU y Australia.
 								</h2>
 							</header>
 							<ul class="icons major">
-								<h3> A través del progreso y los logros personales colaboramos en el desarrollo de la 
-								autoestima y mediante el intercambio constante con instructores compasivos y 
-								trabajando con otros jóvenes en un entorno de formación de equipos colaborativos, aumenta 
-								el respeto por los demás.<br/>
-								Nuestras actividades se llevan a cabo en el Parador Prisma Beach de Monte Hermoso, en el horario de 10 a 13hs los días Lunes, Miercoles 
-								y Viernes. 
-								</h3>
+								<h2>Para llevarlo a cabo contamos con un equipo exclusivamente conformado por<br/>
+								Profesores de Educación Física, Guardavidas, Docentes e Instructores certíficados.
+								</h2>
+								<h2>Nuestras actividades se llevan a cabo en el Parador Prisma Beach de Monte Hermoso, en el horario de 10 a 13hs los días Lunes, Miercoles 
+								y Viernes. </h2>
 								<li><a title="Parador Prisma" href="https://www.instagram.com/prisma_beach/"><img src="images/logo2.jpg"></a></li>
 							</ul>
 						</div>
@@ -80,7 +76,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic.02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/salvamentojr.jpg" alt="" /></div><div class="content">
 								<h2>SALVAMENTO JUNIOR</h2>
 								<p> Para chicos y chicas de entre 12 y 17 años con conocimientos de natación. 
 								Los jóvenes de este grupo llevan a cabo prácticas deportivas que incluyen natación en aguas abiertas, preparación física en la arena,
@@ -93,7 +89,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic.03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/presalvamento.jpg" alt="" /></div><div class="content">
 								<h2>PRE-SALVAMENTO</h2>
 								<p> Para niños y niñas de entre 8 y 11 años. Este grupo conforma la transición entre la Escuelita y 
 								Salvamento Junior, dando los primeros pasos en la natación de aguas abiertas, realizando nados en zonas más alejadas de la costa y comenzando a
@@ -105,7 +101,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic.04.jpeg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/escuelita.jpg" alt="" /></div><div class="content">
 								<h2>ESCUELITA</h2>
 								<p> Para niños y niñas de entre 5 y 7 años. La principal herramienta de trabajo en este grupo es el juego. Aquí
 								los niños y niñas conocen, aprenden y experimentan las primeras ideas sobre el salvamento acuático, la seguridad en el agua, la
