--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="ESCUELA DE MAR® 2025 - Monte Hermoso"/>
-		<meta property="og:image" content="http://escuelademar.com.ar/images/logo-2.jpeg"/>
+		<meta property="og:image" content="http://escuelademar.com.ar/images/grupal.jpg"/>
 		<meta property="og:description" content=" Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como EE.UU y Australia./>
 	</head>
 	<body class="landing is-preload">
