--- a/index.html
+++ b/index.html
@@ -129,25 +129,31 @@
 									<h3>ENTRENAMIENTOS EN EL MAR</h3>
 									<p> Prácticas deportivas de salvamento, natación  en aguas abiertas, circuitos de preparación física en 
 									la arena, juegos y recreación</p>
+									<div align="center"><img src="images/icono mar.png" alt=""/></div>
 								</li>
 								<li>
 									<h3>NOCIONES BÁSICAS DE SURF</h3>
 									<p> Aprender a posicionarse en la tabla, la técnica de la parada la lectura del mar y de los buenos pronósticos
 									de olas.</p>
+									<div align="center"><img src="images/iconosurf.png" alt=""/></div>
 								</li>
 								<li>
 									<h3>VIENTOS, CORRIENTES Y MAREAS</h3>
-									<p>Clases teóricas sobre lectura de vientos, conocimientos de las corrientes y las mareas y la interpretación de la topografía de la playa</p>
+									<p>Clases teóricas sobre lectura de vientos, conocimientos de las corrientes y las mareas y 
+									la interpretación de la topografía de la playa</p>
+									<div align="center"><img src="images/iconocorrientes.png" alt=""/></div>
 								</li>
 								<li>
 									<h3> PRIMEROS AUXILIOS Y RCP</h3>
 									<p> Enseñanza teórica y práctica de las nociones básicas de los primeros auxilios y la maniobra de RCP. El botiquín de primeros auxilios. La comunicación en la
  									playa y la activación de la cadena de emergencia.</p>
+									<div align="center"><img src="images/iconoprimeros auxilios.png" alt=""/></div>
 								</li>
 								<li>
 									<h3> SIMULACIÓN DE RESCATES</h3>
 									<p> La repetición de las prácticas es lo que los lleva a mejorarse a sí mismos constantemente, desafiando distintos climas y estados del mar 
 									y siempre priorizando el trabajo en equipo.</p>
+									<div align="center"><img src="images/iconoguardavidas.png" alt=""/></div>
 								</li>
 							</ul>
 						</div>
