agrega doble comilla faltante para que se corrija la asignacion de clase landing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="ESCUELA DE MAR® 2025 - Monte Hermoso"/>
 		<meta property="og:image" content="http://escuelademar.com.ar/images/grupal.jpg"/>
-		<meta property="og:description" content=" Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como EE.UU y Australia./>
+		<meta property="og:description" content="Una propuesta turística y educativa inspirada en los programas The Junior Lifeguard que se desarrollan en países como EE.UU y Australia."/>
 	</head>
 	<body class="landing is-preload">
 
