corrigo form inscripcion

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<img id='logo' src="./images/logo.svg" />
 							<ul class="actions special">
-								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfYMzca9GJRCT2ktkmKLi8WM98fPtTjTA9gENJXZS2mKsdBfw/viewform?usp=pp_url" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXBO1kLGKCN8_IkWgpq-If5MU1H2k7pt2tMo6aMN6nRniv9Q/viewform" target="none" class="button primary">INSCRIBITE</a></li>
 								<li><a href="https://api.whatsapp.com/send?phone=5492915662338&text=Hola!%20quiero%20saber%20mas%20sobre%20Escuela%20de%20Mar" target="none" class="icon fa-whatsapp button">CONTACTANOS</a></li>
 
 							</ul>
@@ -166,7 +166,7 @@
 								<h2>Vení a vivir un verano inolvidable en la Escuela de Mar de Monte Hermoso</h2>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfYMzca9GJRCT2ktkmKLi8WM98fPtTjTA9gENJXZS2mKsdBfw/viewform?usp=pp_url" target="none" class="button fit primary">INSCRIBITE</a></li>
+								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXBO1kLGKCN8_IkWgpq-If5MU1H2k7pt2tMo6aMN6nRniv9Q/viewform" target="none" class="button fit primary">INSCRIBITE</a></li>
 							</ul>
 						</div>
 					</section>
