--- a/escuelita.html
+++ b/escuelita.html
@@ -45,7 +45,7 @@
 						<header style='background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./images/pic.05.jpg);'>
 							<h2>ESCUELA DE MAR</h2>
 							<ul class="actions special">
-								<li><a href="https://acortar.link/4TQJDf" target="none" class="button primary">INSCRIBITE</a></li>
+								<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXBO1kLGKCN8_IkWgpq-If5MU1H2k7pt2tMo6aMN6nRniv9Q/viewform" target="none" class="button primary">INSCRIBITE</a></li>
 							</ul>
 						</header>
 						<section class="wrapper style5">
@@ -116,7 +116,7 @@
 								<section>
 									<h4 style="text-align:center">NO TE QUEDES SIN TU LUGAR, SERÁ UN VERANO INNOLVIDABLE!!!</h4>
 									<ul class="actions special">
-										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfYMzca9GJRCT2ktkmKLi8WM98fPtTjTA9gENJXZS2mKsdBfw/viewform?usp=pp_url" target="none" class="button primary">INSCRIBITE</a></li>
+										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXBO1kLGKCN8_IkWgpq-If5MU1H2k7pt2tMo6aMN6nRniv9Q/viewform" target="none" class="button primary">INSCRIBITE</a></li>
 									</ul>
 								</section>
 							</div>
